--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 fail_fast: false
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.6.0
     hooks:
       - id: check-byte-order-marker
       - id: check-case-conflict
@@ -12,7 +12,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 24.4.2
     hooks:
       - id: black
   - repo: local
@@ -56,6 +56,13 @@ repos:
         name: cargo test
         description: unit test for the project
         entry: bash -c 'cargo nextest run --all-features'
+        language: rust
+        files: \.rs$
+        pass_filenames: false
+      - id: cargo-tarpaulin
+        name: cargo tarpaulin
+        description: unit test for the project
+        entry: bash -c 'cargo tarpaulin --out Html --fail-under 60'
         language: rust
         files: \.rs$
         pass_filenames: false
