--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/psf/black
-    rev: 24.4.2
+    rev: 24.8.0
     hooks:
       - id: black
   - repo: local
@@ -59,10 +59,10 @@ repos:
         language: rust
         files: \.rs$
         pass_filenames: false
-      - id: cargo-tarpaulin
-        name: cargo tarpaulin
-        description: unit test for the project
-        entry: bash -c 'cargo tarpaulin --out Html --fail-under 60'
-        language: rust
-        files: \.rs$
-        pass_filenames: false
+      # - id: cargo-tarpaulin
+      #   name: cargo tarpaulin
+      #   description: unit test for the project
+      #   entry: bash -c 'cargo tarpaulin --out Html --fail-under 60'
+      #   language: rust
+      #   files: \.rs$
+      #   pass_filenames: false
